<resources>
    <string name="app_name">Expense App</string>
    <string name="title">Expense Tracker</string>
    <string name="welcome">Welcome to your expense tracking application.</string>
    <string name="get_started">Get Started</string>
    <string name="learn_more">Learn More</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email: example@gmai.com</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="communication">Communication</string>
    <string name="about">About</string>
    <string name="your_name">Charles Alfred</string>
    <string name="gmail">myappexample@gmail.com</string>
    <string name="open">Open navigation Drawer</string>
    <string name="close">Close navigation Drawer</string>
    <string name="or">or</string>
    <string name="google_account">Google Account</string>
    <string name="apple_account">Apple Account</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Register</string>
    <string name="statistics">Statistics</string>
    <string name="budget">Budget</string>
    <string name="account_image">Account image</string>
    <string name="info">If you don\'t have an account you are missing out:\n• Chances of monitoring you daily expense.\n• Reminders and notifications on bills and upcoming expenses.\n• Understanding and identifying areas where to cut or make adjustment on spending.\n • Financial insights.</string>
    <string name="account_name">Charles Alfred \ncharlesonvidalic740@gmail.com</string>
    <string name="photo_info">profile photo</string>
    <string name="scan">Scan</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="amount">Kshs 20,000</string>
    <string name="date">Date</string>
    <string name="receipt">Scan Receipt</string>
    <string name="recent_categories">Recent Categories</string>
    <string name="add">Add</string>
    <string name="budget_amount">Kshs 18,000</string>
    <string name="budgeted_amount">Budget Amount</string>
    <string name="groceries">Grocery</string>
    <string name="upload">Upload</string>
    <string name="save_expenses">Add Expenses</string>
    <string name="view_all">View All</string>
    <string name="electronics">Electronic</string>
    <string name="utensils">Utensils</string>
    <string name="sign_up_with">sign up with</string>
    <string name="profile_name">Charles Alfred</string>
    <string name="profile_email">charlesonvidalic740@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="turn_on_notifications">Turn on Notifications</string>
    <string name="expense_reminder">Expense Reminder</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save_details">Save Details</string>
    <string name="daily_budget">Daily Budget</string>
    <string name="weekly_budget">Weekly Budget</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="save">Save</string>
    <string name="reminder">Reminder</string>
    <string name="activity_report">Activity Report</string>
    <string name="account_number">Account number</string>
    <string name="email">Email</string>
    <string name="link">Link</string>
    <string name="change">Change</string>
    <string name="reg_date">Registration Date</string>
    <string name="personal_information">Personal information</string>
    <string name="middle_name">Middle Name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="add_item">Add item</string>
    <string name="general">General</string>
    <string name="personalization">Personalization\nChoose the app theme and accent color</string>
    <string name="language">Language</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="text_size">Text Size</string>
    <string name="ad_blocking">Ad blocking</string>
    <string name="night_mode">Night mode..</string>
    <string name="advanced">Advanced</string>
    <string name="help">Help</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="expenses">Expenses</string>
    <string name="expense_date">Sat 16 March 2021</string>
    <string name="transport">Transport</string>
    <string name="food">Food</string>
    <string name="kes_700">Kes. 700</string>
    <string name="travel">Travel</string>
    <string name="kes_1500">kes.1500</string>
    <string name="shopping">Shopping</string>
    <string name="kes_3500">Kes.400</string>
    <string name="cloths">Cloths</string>
    <string name="transaction">Transaction</string>
    <string name="kes_7000">Kes.7000</string>
    <string name="kes_17000">Kes.17000</string>
    <string name="rent">Home Rent</string>
    <string name="kes_15000">Kes.15000</string>
    <string name="kes_0">Kes.0</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="today">Today</string>
    <string name="save_expense">SAVE</string>
    <string name="confirm_password">Confirm Pass..</string>

</resources>