<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/home"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings"
            android:title="@string/settings"/>

        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/notifications"/>
    </group>

    <item android:title="@string/profile">

        <menu>
            <group>
                <item android:id="@+id/nav_account"
                    android:icon="@drawable/baseline_account_circle_24"
                    android:title="@string/account"/>

                <item android:id="@+id/nav_statistics"
                    android:icon="@drawable/baseline_stats"
                    android:title="@string/statistics"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/communication">

        <menu>
            <group>
                <item android:id="@+id/nav_about"
                    android:icon="@drawable/baseline_info_24"
                    android:title="@string/about"/>

                <item android:id="@+id/nav_share"
                    android:icon="@drawable/baseline_share_24"
                    android:title="@string/share"/>

            </group>
        </menu>
    </item>

    <item android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/log_out"/>

</menu>