<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#161614"
    tools:context=".BudgetFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/expenses"
        android:text="@string/expenses"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <com.github.mikephil.charting.charts.BarChart
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:id="@+id/barChart_view"
        android:layout_below="@+id/expenses"
        android:background="#73CFB8"
        android:layout_margin="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/date"
        android:layout_below="@+id/barChart_view"
        android:text="@string/expense_date"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:gravity="center_vertical"
        android:layout_margin="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:id="@+id/food"
        android:layout_below="@+id/date"
        android:text="@string/food"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:layout_margin="12dp"
        android:background="@drawable/back_ground"
        android:backgroundTint="#D3E9EC "/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:id="@+id/food_amount"
        android:layout_below="@+id/date"
        android:text="@string/kes_700"
        android:textColor="#161614"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="34dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:id="@+id/travel"
        android:layout_below="@+id/food"
        android:text="@string/travel"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:layout_margin="12dp"
        android:background="@drawable/back_ground"
        android:backgroundTint="#D3E9EC "/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:id="@+id/travel_amount"
        android:layout_below="@+id/food"
        android:text="@string/kes_1500"
        android:textColor="#161614"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="34dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:id="@+id/shopping"
        android:layout_below="@+id/travel"
        android:text="@string/shopping"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:layout_margin="12dp"
        android:background="@drawable/back_ground"
        android:backgroundTint="#D3E9EC "/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:id="@+id/shopping_amount"
        android:layout_below="@+id/travel"
        android:text="@string/kes_3500"
        android:textColor="#161614"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="34dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:id="@+id/cloths"
        android:layout_below="@+id/shopping"
        android:text="@string/cloths"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:layout_margin="12dp"
        android:background="@drawable/back_ground"
        android:backgroundTint="#D3E9EC "/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:id="@+id/cloths_amount"
        android:layout_below="@+id/shopping"
        android:text="@string/kes_3500"
        android:textColor="#161614"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="34dp"/>


</RelativeLayout>